  run when starting up; it sets up several things that previously needed
  to be done separately.
  (Martin Pool, #507710)

* Remove unused ``CommandFailed`` exception.
  (Martin Pool)

Testing
*******

* New `bzrlib.tests.test_import_tariff` can make assertions about what
  Python modules are loaded, to guard against startup time or library
  dependency regressions.
  (Martin Pool)

* Stop sending apport crash files to ``.cache`` in the directory from
  which ``bzr selftest`` was run.  (Martin Pool, #422350)

bzr 2.1.0
#########

:Codename: Strasbourg
:2.1.0: 2010-02-11

This release marks our second long-term-stable series. The Bazaar team
has decided that we will continue to make bugfix-only 2.0.x and 2.1.x
releases, along with 2.2 development releases. 

This is a fairly incremental update, focusing on polish and bugfixing.
There are no changes for supported disk formats. Key updates include
reduced memory consumption for many operations, a new per-file merge
hook, ignore patterns can now include '!' to exclude files, globbing
support for all commands on Windows, and support for addressing home
directories via ``bzr+ssh://host/~/`` syntax.

Users are encouraged to upgrade from the 2.0 stable series.

Bug Fixes
*********

* Don't require testtools to use sftp.
  (Vincent Ladeuil, #516183)

* Fix "AttributeError in Inter1and2Helper" during fetch.
  (Martin Pool, #513432)

* ``bzr update`` performs the two merges in a more logical order and will stop
  when it encounters conflicts.  
  (Gerard Krol, #113809)

* Fix ``log`` to better check ancestors even if merged revisions are involved.
  (Vincent Ladeuil, #476293)

* Give a better error message when doing ``bzr bind`` in an already bound
  branch.  (Neil Martinsen-Burrell, #513063)

* Ignore ``KeyError`` from ``remove_index`` during ``_abort_write_group``
  in a pack repository, which can happen harmlessly if the abort occurs during
  finishing the write group.  Also use ``bzrlib.cleanup`` so that any